--- a/styles.css
+++ b/styles.css
@@ -75,16 +75,20 @@ body {
 
 .gitico {
     position: absolute;
-    width: 3%;
-    height: 3%;
+    width: auto;
+    height: auto;
+    max-width: 3%;
+    max-height: 3%;
     top: 50%;
-    left: 47%;
+    left: 47.5%;
 }
 
 .discico {
     position: absolute;
-    width: 1.5%;
-    height: 3%;
+    width: auto;
+    height: auto;
+    max-width: 1.5%;
+    max-height: 3%;
     top: 55%;
-    left: 47.74%;
+    left: 47.5%;
 }
