--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
 }
 
 .form- {
-    font-size: 155%;
+    font-size: 25px;
     color: #968a96;
     font-family: monospace, sans-serif;
     text-decoration: none;
